<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInFragment">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:gravity="center_horizontal"
            android:background="@color/white"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">


            <LinearLayout
                android:id="@+id/Giflay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                app:layout_constraintTop_toTopOf="parent">

                <pl.droidsonroids.gif.GifImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/animation___1710397145725" />
            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userMainSignProfile"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:elevation="8dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/chipma"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Giflay" />

            <TextView
                android:id="@+id/chipRe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/work_sans_semibold"
                android:text="C H I P O T L E  R E W A R D S"
                android:textAlignment="center"
                android:textColor="@color/darkBrown"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userMainSignProfile" />

            <TextView
                android:id="@+id/earn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/work_sans_bold"
                android:padding="16dp"
                android:text="EARN POINTS, COMPLETE \n CHALLENGERS, AND REDEEM \n REWARDS"
                android:textAlignment="center"
                android:textColor="@color/darkBrown"
                android:textSize="23sp"
                app:layout_constraintTop_toBottomOf="@+id/chipRe" />

            <Button
                android:id="@+id/createAccountButtonSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/round_corner"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="C r e a t e   A c c o u n t"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/earn" />

            <!-- Sign In Button -->
            <Button
                android:id="@+id/signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="95dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="95dp"
                android:background="@drawable/corner"
                android:fontFamily="@font/work_sans_semibold"
                android:gravity="center"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="S I G N  I N"
                android:textColor="@color/darkBrown"
                android:textSize="15sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/createAccountButtonSign" />

        </LinearLayout>
        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:background="#d3d3d3"
            app:layout_constraintTop_toBottomOf="@id/linear"
            android:layout_height="1dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/divider2"
            android:text="How Reward Works"
            android:textColor="#B5651D"
            android:textSize="20sp"
            android:id="@+id/how"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"/>
        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:background="#808080"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@id/how"
            android:layout_height="1dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D6D6D6"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/divider3"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/find"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="sans-serif"
                android:text="Find a Chipotle"
                android:textColor="@color/darkBrown"
                android:textSize="20sp" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#808080"
                app:layout_constraintTop_toBottomOf="@id/find" />

            <TextView
                android:id="@+id/personal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/personal_preferences"
                android:textColor="@color/darkBrown"
                android:textSize="20sp" />
            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:background="#808080"
                app:layout_constraintTop_toBottomOf="@id/personal"
                android:layout_height="1dp" />
            <TextView
                android:id="@+id/OurCommitment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="Our Commitment To You"
                android:textColor="@color/darkBrown"
                android:textSize="20sp" />
            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:background="#808080"
                app:layout_constraintTop_toBottomOf="@id/personal"
                android:layout_height="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/chat"
                        android:backgroundTint="@color/darkBrown"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginStart="35dp"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/darkBrown"
                    android:fontFamily="@font/work_sans_semibold"
                    android:text="Need Help? Chat with Pepper."
                    android:layout_height="wrap_content"/>
                </RelativeLayout>
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_app"
                android:gravity="center"
                    android:fontFamily="@font/work_sans_medium"
                android:layout_marginTop="20dp"
                android:textColor="@color/caramel"
                android:textSize="16sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qa"
                    android:gravity="center"
                    android:fontFamily="@font/work_sans_medium"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/caramel"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/policy"
                    android:gravity="center"
                    android:fontFamily="@font/work_sans_medium"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/caramel"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rights"
                    android:gravity="center"
                    android:fontFamily="@font/work_sans_medium"
                    android:textColor="@color/caramel"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choice"
                    android:gravity="center"
                    android:fontFamily="@font/work_sans_medium"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/caramel"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/work_sans"
                    android:gravity="center"
                    android:text="Want to make lots of friends?"
                    android:textColor="@color/darkBrown"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/work_sans_medium"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/catering"
                    android:textColor="@color/caramel"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>